--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <td><a href="#">Download</a></td>
             </tr>
             <tr>
-                <td>Chemistry</td>
+                <td>CSE</td>
                 <td>2023</td>
                 <td>Semester 1</td>
                 <td><a href="#">Download</a></td>
